--- a/react-app/src/pages/covidProject/covid-project.css
+++ b/react-app/src/pages/covidProject/covid-project.css
@@ -56,8 +56,11 @@
     gap: 1rem;
     margin-right: 2rem;
 }
-.add-patient-btn, .add-dose-dtn, .add-vaccine-btn{
+.add-patient-btn, .add-dose-btn, .add-vaccine-btn{
     width: 10rem;
+}
+.add-dose-btn:hover{
+    background-color: rgb(219, 143, 0) !important;
 }
 .widget-mediumScreen{
     display: none;
